# ordo

./: .gitignore  2025.json  fix.py  ordo.py  ordo2pdf.sh  pyproject.toml  see.json
Resources/Data/: calendar.json  comments.json  other.json
Resources/themes/: ordoa5-theme.yml  ordoa6-theme.yml
Results/2026/: ordo.csv  ordo.html  ordo.json  ordo_without_ep.json  scrap.json  scrap_feasts.json  scrap_feasts_others.json  scrap_feasts_others_votives.json  votives.json
Source/prepare/: __init__.py  build_ordo.py  final_json.py
Source/publish/: __init__.py  csv.py  pdf.py
Source/scrap/: __init__.py  gcatholics.py  readings.py
data/: fix.json  votives.json
resources/: style.css  style_1.css
resources/themes/: ordo-theme.yml  ordoa6-theme.yml
rst/2025/: scrap.json
src/: ordo.py  orm.py  print.py  scrap_ordo.py  scrap_readings.py
